# libvirt-dbus

./: HACKING.md  libvirt-dbus.spec.in  meson.build
data/: Makefile.am  org.libvirt.Connect.xml  org.libvirt.Domain.xml  org.libvirt.Network.xml  org.libvirt.StoragePool.xml
data/system/: libvirt-dbus.service.in  meson.build
src/: Makefile.am  connect.c  domain.c  events.c  gdbus.c  network.c  secret.c  storagepool.c  storagevol.c  util.c  util.h
test/: Makefile.am  conftest.py  libvirttest.py  test_connect.py  test_domain.py  travis-run
tests/: conftest.py  libvirttest.py  test_connect.py  test_domain.py  test_network.py  test_storage.py
